--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<div><button (click)="login()">zaloguj</button>
+<div>
+    <app-nav></app-nav>
+    <button (click)="login()">zaloguj</button>
 </div>
