--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,1 +1,6 @@
-<p>nav works!</p>
+<nav>
+    <div *ngIf="userData | async as user">
+        {{user.display_name}}
+        <img [src]="user.images[0].url">
+    </div>
+</nav>
