--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<div>
+<div class="app">
     <app-nav></app-nav>
-    <button (click)="login()">zaloguj</button>
+    <div class="main"><button class="btn" (click)="login()">zaloguj</button>
+        <mat-slider min="1" max="100" step="1" value="50"></mat-slider>
+
+    </div>
 </div>
