--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
     <app-nav></app-nav>
     <div class="main"><button class="btn" (click)="login()">zaloguj</button>
         <mat-slider min="1" max="100" step="1" value="50"></mat-slider>
-
+        <app-home></app-home>
     </div>
 </div>
