--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div class="app">
     <app-nav></app-nav>
-    <div class="main"><button class="btn" (click)="login()">zaloguj</button>
-        <mat-slider min="1" max="100" step="1" value="50"></mat-slider>
+    <div class="main">
         <app-home></app-home>
     </div>
 </div>
