--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,8 @@
     .main{
         margin-left: 200px;
         width: 100%;
+        overflow-y: scroll;
         background-color: #35393c;
+        padding-top: 25px;
     }
 }
