--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,4 @@
 <div class="home">
-    <ul class="track-list" *ngIf="savedTracks | async as tracks">
-        <li (click)="play(item.track.uri)" class="track" *ngFor="let item of tracks">
-            <img class="track-img" [src]="item.track.album.images[0].url">
-            <span class="track-artist">{{item.track.artists[0].name}}</span>
-        </li>
-    </ul>
+    <h1 class="title">Saved tracks 😎</h1>
+    <app-track-list class="track-list" [tracksList]="savedTracks"></app-track-list>
 </div>
