--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,8 @@
 <nav class="nav">
+    <ng-container *ngIf="(loggedIn | async) === false">
+        <button class="btn" (click)="login()">zaloguj</button>
+    </ng-container>
+
     <div class="user-data" *ngIf="userData | async as user">
         {{user.display_name}}
         <img class="user-img" [src]="user.images[0].url">
