--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -7,10 +7,12 @@
     background-color: #2c2f31;
     display: flex;
     flex-direction: column;
+    padding: 10px;
 
     .user-data{
-    display: flex;
-    flex-direction: column;
+        margin: 20px 0;
+        display: flex;
+        flex-direction: column;
     }
 
     .user-img{
@@ -18,5 +20,6 @@
         height: 100px;
         object-fit: cover;
         border-radius: 5px;
+        margin-top: 10px;
     }
 }
