--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,13 +44,17 @@ $bg-elevation: #363636;
     background-color: $primary;
 }
 
-body{
+html, body { height: 100%; }
+
+body {
     margin: 0;
     font-family: 'Fredoka', sans-serif;
     color: $text;
 
-    h1, h2, h3, h4, h5, h6, p, span, div{
-    font-family: 'Fredoka', sans-serif;
+   .app{ 
+       h1, h2, h3, h4, h5, h6, p, span, div{
+            font-family: 'Fredoka', sans-serif;
+        }
     }
 
     img {
@@ -82,5 +86,3 @@ body{
 .btn{
     @include btn($primary, $primary);
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
