--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,3 +1,9 @@
 <div class="player">
-    <mat-slider min="1" max="5" step="0.5" value="1.5"></mat-slider>
+    <!-- <mat-slider min="1" max="5" step="0.5" value="1.5"></mat-slider> -->
+    <button *ngIf="playerState | async as player" class="play" (click)="togglePlay()">
+        <mat-icon *ngIf="player.paused">play_circle_outline</mat-icon>
+        <mat-icon *ngIf="!player.paused">pause_circle_outline</mat-icon>
+        {{player.position}}{{player.paused}}
+    </button>
+
 </div>
