--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -11,4 +11,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    .play{
+        background-color: transparent;
+        border: none;
+        color: #fff;
+    }
 }
