--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,9 +1,15 @@
-<div class="player">
-    <!-- <mat-slider min="1" max="5" step="0.5" value="1.5"></mat-slider> -->
-    <button *ngIf="playerState | async as player" class="play" (click)="togglePlay()">
-        <mat-icon *ngIf="player.paused">play_circle_outline</mat-icon>
-        <mat-icon *ngIf="!player.paused">pause_circle_outline</mat-icon>
-        {{player.position}}{{player.paused}}
-    </button>
-
+<div *ngIf="playerState | async as player" class="player">
+    <div class="action-buttons">
+        <button class="btn" (click)="skipPrev()">
+            <mat-icon>skip_previous</mat-icon>
+        </button>
+        <button class="btn" (click)="togglePlay()">
+            <mat-icon *ngIf="player.paused">play_circle_outline</mat-icon>
+            <mat-icon *ngIf="!player.paused">pause_circle_outline</mat-icon>
+        </button>
+        <button class="btn" (click)="skipPrev()">
+            <mat-icon>skip_next</mat-icon>
+        </button>
+    </div>
+    <mat-slider min="0" max="1" step="0.1" value="0.5"></mat-slider>
 </div>
