--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -12,9 +12,18 @@
     justify-content: center;
     align-items: center;
 
-    .play{
+    .btn{
         background-color: transparent;
         border: none;
         color: #fff;
+        display: flex;
+    }
+
+    .action-buttons{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        max-width: 250px;
+        width: 100%;
     }
 }
