--- a/src/app/track-list/track-list.component.scss
+++ b/src/app/track-list/track-list.component.scss
@@ -3,7 +3,11 @@
     justify-content: center;
     flex-direction: column;
     margin: auto;
-    width: 60%;
+    width: 80%;
+
+    .song-info{
+        display: flex;
+    }
 
     .track {
         display: flex;
@@ -22,6 +26,8 @@
             width: 100px;
             height: 100px;
             object-fit: cover;
+            margin-right: 10px;
+            border-radius: 5px;
         }
     }
 }
