--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
     </ng-container>
 
     <div class="user-data" *ngIf="userData | async as user">
-        {{user.display_name}}
         <img class="user-img" [src]="user.images[0].url">
+        <span class="user-name">{{user.display_name}}</span>
     </div>
 </nav>
