--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -12,12 +12,13 @@
     .user-data{
         margin: 20px 0;
         display: flex;
-        flex-direction: column;
+        align-items: center;
     }
 
     .user-img{
-        width: 100px;
-        height: 100px;
+        width: 50px;
+        height: 50px;
+        margin-right: 10px;
         object-fit: cover;
         border-radius: 5px;
         margin-top: 10px;
