--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -8,9 +8,12 @@
     height: 100px;
     background-color: #2c2f31;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+    padding-left: 220px;
+    box-sizing: border-box;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 
     .btn{
         background-color: transparent;
@@ -29,6 +32,7 @@
 
     .song-info{
         display: flex;
+        align-items: center;
 
         .album-image{
             width: 80px;
@@ -36,11 +40,41 @@
             object-fit: cover;
             border-radius: 5px;
             display: block;
+            margin-right: 10px;
+        }
+
+        .name{
+            margin-bottom: 0;
+        }
+
+        .artist-container{
+            display: flex;
+            opacity: 0.6;
+            margin-top: 5px;
+        }
+
+        .artist{
+            margin-right: 5px;
         }
 
         .album-artist{
             display: flex;
             flex-direction: column;
         }
+        .album-name{
+            opacity: 0.6;
+            font-size: 16px;
+        }
+    }
+
+    .slider-container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .volume-slider{
+        max-width: 150px;
+        width: 100%;
     }
 }
