--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="app">
     <app-nav></app-nav>
     <div class="main">
-        <app-home></app-home>
+        <router-outlet></router-outlet>
     </div>
     <app-player></app-player>
 </div>
