--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,3 @@
 <div class="home">
-    <h1 class="title">Saved tracks 😎</h1>
-    <app-track-list class="track-list" [tracksList]="savedTracks"></app-track-list>
+    <h1 class="title">Home 😎</h1>
 </div>
