--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,7 +52,7 @@ body {
     color: $text;
 
    .app{ 
-       h1, h2, h3, h4, h5, h6, p, span, div{
+       h1, h2, h3, h4, h5, h6, a, p, span, div{
             font-family: 'Fredoka', sans-serif;
         }
     }
