--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -9,8 +9,12 @@
     </div>
 
     <ul class="nav-links">
-        <li><a class="link" routerLink="/" routerLinkActive="active">Home</a></li>
-        <li><a class="link" routerLink="/saved" routerLinkActive="active">Saved</a></li>
+        <li><a class="link" routerLink="/" routerLinkActive="active">
+                <mat-icon class="icon">home</mat-icon> Home
+            </a></li>
+        <li><a class="link" routerLink="/saved" routerLinkActive="active">
+                <mat-icon class="icon">favorite</mat-icon> Saved
+            </a></li>
     </ul>
 
 
