--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,9 +8,8 @@
     .main{
         margin-left: 200px;
         width: 100%;
-        overflow-y: scroll;
+        overflow-y: hidden;
         background-color: #35393c;
         padding-top: 25px;
-        padding-bottom: 150px;
     }
 }
