--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -47,6 +47,10 @@
         }   
     }
 
+    .icon{
+        margin-right: 10px;
+    }
+
     .playlist-img{
         width: 40px;
         height: 40px;
@@ -70,6 +74,7 @@
 
     .playlist-list{
         margin-top: 50px;
+        overflow: auto;
     }
 
     .playlist-name{
