--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -5,7 +5,7 @@
     right: 0;
     width: 100%;
 
-    height: 100px;
+    height: 140px;
     background-color: #2c2f31;
 
 
@@ -28,6 +28,7 @@
         align-items: center;
         max-width: 250px;
         width: 100%;
+        margin-left: 25%;
     }
 
     .song-info{
