--- a/src/app/saved/saved.component.html
+++ b/src/app/saved/saved.component.html
@@ -1,4 +1,4 @@
-<div class="home">
+<div class="saved">
     <h1 class="title">Saved tracks 😎</h1>
     <app-track-list class="track-list" [tracksList]="savedTracks"></app-track-list>
 </div>
