--- a/src/app/saved/saved.component.scss
+++ b/src/app/saved/saved.component.scss
@@ -1,11 +1,15 @@
-.home {
+.saved {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-height: 80vh;
+ 
 
     .track-list {
         width: 100%;
+        max-height: 50%;
+        overflow-y: scroll;
     }
 
     .title {
