--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -19,9 +19,9 @@
 
 
     <div class="playlist-list" *ngIf="userPlaylists | async as items">
-        <div class="playlist" *ngFor="let item of items">
+        <a class="link" [routerLink]="['/playlist', item.id]" class="playlist" *ngFor="let item of items">
             <img class="playlist-img" [src]="item.images[0].url">
             <h3 class="playlist-name">{{item.name}}</h3>
-        </div>
+        </a>
     </div>
 </nav>
