--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -66,6 +66,8 @@
         transition: background-color 0.3s;
         padding: 5px;
         border-radius: 10px;
+        color: #fff;
+        text-decoration: none;
 
         &:hover{
             background-color: rgba(#fff, 0.05);
