--- a/src/app/playlist-tracks/playlist-tracks.component.html
+++ b/src/app/playlist-tracks/playlist-tracks.component.html
@@ -1,1 +1,4 @@
-<p>playlist-tracks works!</p>
+<div class="playlist">
+    <h1 class="title">{{title}}</h1>
+    <app-track-list class="track-list" [tracksList]="tracks"></app-track-list>
+</div>
