--- a/src/app/track-list/track-list.component.html
+++ b/src/app/track-list/track-list.component.html
@@ -13,6 +13,6 @@
             </div>
         </div>
 
-        <span class="track-artist">{{durationTime(item.track.duration_ms)}}</span>
+        <span class="track-artist">{{item.track.duration_ms | duration}}</span>
     </li>
 </ul>
