--- a/src/app/playlist-tracks/playlist-tracks.component.html
+++ b/src/app/playlist-tracks/playlist-tracks.component.html
@@ -1,4 +1,5 @@
 <div class="playlist">
     <h1 class="title">{{title}}</h1>
-    <app-track-list class="track-list" [tracksList]="tracks"></app-track-list>
+    <app-track-list class="track-list" (getNextPage)="getNextPage($event)" [total]="total" [tracksList]="tracks">
+    </app-track-list>
 </div>
