--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,13 @@
-.app{
+.app {
     display: flex;
     flex-direction: row;
     position: relative;
     height: 100vh;
     overflow: hidden;
 
-    .main{
-        margin-left: 200px;
+    .main {
+        margin-left: 220px;
+        margin-bottom: 140px;
         width: 100%;
         overflow-y: hidden;
         background-color: #35393c;
