--- a/src/app/playlist-tracks/playlist-tracks.component.scss
+++ b/src/app/playlist-tracks/playlist-tracks.component.scss
@@ -2,17 +2,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     max-height: 80vh;
 
 
-    .track-list {
-        width: 100%;
-        max-height: 50%;
-        overflow-y: scroll;
-    }
-
     .title {
         margin-bottom: 50px;
+        text-align: center;
     }
 }
