--- a/src/app/track-list/track-list.component.html
+++ b/src/app/track-list/track-list.component.html
@@ -1,18 +1,23 @@
-<ul class="track-list" *ngIf="tracksList | async as tracks">
-    <li (click)="play(i)" class="track" *ngFor="let item of tracks; let i = index">
-        <div class="song-info">
-            <img class="track-img" [src]="item.track.album.images[0].url">
-            <div class="album-artist">
-                <h2 class="name">{{item.track.name}}</h2>
-                <span class="album-name">
-                    {{item.track.album.name}}
-                </span>
-                <div class="time">
-                    <span *ngFor="let artist of item.track.artists" class="artist">{{artist.name}}</span>
+<div #trackList class="track-list-container">
+    <ul class="track-list" *ngIf="tracksList | async as tracks">
+        <li (click)="play(i)" class="track" *ngFor="let item of tracks; let i = index">
+            <div class="song-info">
+                <img class="track-img" [src]="item.track.album.images[0].url">
+                <div class="album-artist">
+                    <h2 class="name">{{item.track.name}}</h2>
+                    <span class="album-name">
+                        {{item.track.album.name}}
+                    </span>
+                    <div class="time">
+                        <span *ngFor="let artist of item.track.artists" class="artist">{{artist.name}}</span>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <span class="track-artist">{{item.track.duration_ms | duration}}</span>
-    </li>
-</ul>
+            <span class="track-artist">{{item.track.duration_ms | duration}}</span>
+        </li>
+    </ul>
+    <mat-paginator (page)="handlePageEvent($event)" [length]="total" [pageSize]="pageSize" [pageIndex]="currentPage"
+        aria-label="Select page">
+    </mat-paginator>
+</div>
