--- a/src/app/track-list/track-list.component.scss
+++ b/src/app/track-list/track-list.component.scss
@@ -1,3 +1,10 @@
+.track-list-container {
+    display: flex;
+    flex-direction: column;
+    max-height: 65vh;
+    overflow-y: scroll;
+}
+
 .track-list {
     display: flex;
     justify-content: center;
@@ -5,7 +12,7 @@
     margin: auto;
     width: 80%;
 
-    .song-info{
+    .song-info {
         display: flex;
     }
 
@@ -18,7 +25,7 @@
         border-radius: 10px;
         transition: background-color 0.3s;
 
-        &:hover{
+        &:hover {
             background-color: #2c2f31;
         }
 
@@ -30,4 +37,11 @@
             border-radius: 5px;
         }
     }
+}
+
+.mat-paginator {
+    margin: auto;
+    width: 80%;
+    background-color: #35393C;
+    color: #fff;
 }
