--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,10 @@
 <div class="home">
     <h1 class="title">Home 😎</h1>
+
+    <div class="playlist-list">
+        <div class="playlist" *ngFor="let item of trackService.getFeaturedPlaylists() | async">
+            <img [src]="item.images[0].url">
+            <h2>{{item.name}}</h2>
+        </div>
+    </div>
 </div>
