--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,7 +9,7 @@
         margin-left: 220px;
         margin-bottom: 140px;
         width: 100%;
-        overflow-y: hidden;
+        overflow-y: scroll;
         background-color: #35393c;
         padding-top: 25px;
     }
