--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -12,10 +12,34 @@
         margin-bottom: 50px;
     }
 
-    .playlist img {
+    .playlist {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 16px 20px;
+        border-radius: 10px;
+        transition: background-color 0.3s;
+        cursor: pointer;
+        text-decoration: none;
+
+        &:hover {
+            background-color: #2c2f31;
+        }
+    }
+
+    .playlist-img {
         max-width: 200px;
         height: 200px;
         object-fit: cover;
+        border-radius: 10px;
+        margin-bottom: 10px;
+    }
+
+    .playlist-title {
+        margin-bottom: 0;
+        color: #fff;
+        text-decoration: none;
     }
 
     .playlist-list {
