--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -15,9 +15,9 @@
         <li><a class="link" routerLink="/saved" routerLinkActive="active">
                 <mat-icon class="icon">favorite</mat-icon> Saved
             </a></li>
-        <li><a class="link" routerLink="/search" routerLinkActive="active">
+        <!-- <li><a class="link" routerLink="/search" routerLinkActive="active">
                 <mat-icon class="icon">search</mat-icon> Search
-            </a></li>
+            </a></li> -->
     </ul>
 
 
