--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,58 +1,42 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
+@import "~@angular/material/prebuilt-themes/purple-green.css";
 // Plus imports for other components in your app.
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&display=swap');
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-@include mat.core();
-
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$spotrx-primary: mat.define-palette(mat.$indigo-palette);
-$spotrx-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$spotrx-warn: mat.define-palette(mat.$red-palette);
-
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$spotrx-theme: mat.define-light-theme((
-  color: (
-    primary: $spotrx-primary,
-    accent: $spotrx-accent,
-    warn: $spotrx-warn,
-  )
-));
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include mat.all-component-themes($spotrx-theme);
-
-
 
 $primary: #1ecd5d;
 $text: #fff;
 $text-dark: #363636;
 $bg-elevation: #363636;
 
-.mat-slider.mat-accent .mat-slider-track-fill, .mat-slider.mat-accent .mat-slider-thumb {
+.mat-slider.mat-accent .mat-slider-track-fill,
+.mat-slider.mat-accent .mat-slider-thumb {
     background-color: $primary;
 }
 
-html, body { height: 100%; }
+html,
+body {
+    height: 100%;
+}
 
 body {
     margin: 0;
     font-family: 'Fredoka', sans-serif;
     color: $text;
 
-   .app{ 
-       h1, h2, h3, h4, h5, h6, a, p, span, div{
+    .app {
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6,
+        a,
+        p,
+        span,
+        div {
             font-family: 'Fredoka', sans-serif;
         }
     }
@@ -86,7 +70,7 @@ body {
 /* Works on Firefox */
 * {
     scrollbar-width: thin;
-    scrollbar-color: $primary  $bg-elevation;
+    scrollbar-color: $primary $bg-elevation;
 }
 
 /* Works on Chrome, Edge, and Safari */
@@ -104,6 +88,6 @@ body {
     border: 3px solid $text-dark;
 }
 
-.btn{
+.btn {
     @include btn($primary, $primary);
 }
