--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -4,6 +4,40 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    .track-list {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        margin: auto;
+        width: 80%;
+
+        .song-info {
+            display: flex;
+        }
+
+        .track {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+            padding: 8px 20px;
+            border-radius: 10px;
+            transition: background-color 0.3s;
+
+            &:hover {
+                background-color: #2c2f31;
+            }
+
+            .track-img {
+                width: 90px;
+                height: 90px;
+                object-fit: cover;
+                margin-right: 10px;
+                border-radius: 5px;
+            }
+        }
+    }
 }
 
 .search-input-field {
