--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -23,7 +23,7 @@
 
     <div class="playlist-list" *ngIf="userPlaylists | async as items">
         <a class="link" [routerLink]="['/playlist', item.id]" class="playlist" *ngFor="let item of items">
-            <img class="playlist-img" [src]="item.images[0]?.url">
+            <img class="playlist-img" [src]="item.images[0].url">
             <h3 class="playlist-name">{{item.name}}</h3>
         </a>
     </div>
