--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -5,8 +5,8 @@
 
     </mat-form-field>
 
-    <ul class="track-list" *ngIf="trackService.getSearchResultTracks() | async as tracks">
-        <li (click)="play(item.uri)" class="track" *ngFor="let item of tracks">
+    <ul class="track-list" *ngIf="searchResults()">
+        <li (click)="play(item.uri)" class="track" *ngFor="let item of searchResults()">
             <div class="song-info">
                 <img class="track-img" [src]="item.album.images[0].url">
                 <div class="album-artist">
