--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,13 +1,45 @@
-@import '~@angular/material/theming';
+@import '@angular/material/theming';
 @include mat-core();
 
-$primary: #1ecd5d;
-$text: #fff;
-$text-dark: #363636;
-$bg-elevation: #363636;
+$primary-palette: (
+  50 : #e4f9ec,
+  100 : #bcf0ce,
+  200 : #8fe6ae,
+  300 : #62dc8e,
+  400 : #40d575,
+  500 : #1ecd5d,
+  600 : #1ac855,
+  700 : #16c14b,
+  800 : #12ba41,
+  900 : #0aae30,
+  A100 : #daffe1,
+  A200 : #a7ffb8,
+  A400 : #74ff8e,
+  A700 : #5bff7a,
+  contrast: (50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #000000,
+    400 : #000000,
+    500 : #000000,
+    600 : #000000,
+    700 : #000000,
+    800 : #ffffff,
+    900 : #ffffff,
+    A100 : #000000,
+    A200 : #000000,
+    A400 : #000000,
+    A700 : #000000,
+  )
+);
 
-$spotrx-primary: mat-palette($primary);
-$spotrx-accent: mat-palette($text-dark, 500, 900, A100);
-$spotrx-warn: mat-palette($mat-deep-orange);
-$spotrx-theme: mat-light-theme($spotrx-primary, $spotrx-accent, $spotrx-warn);
-@include angular-material-theme($spotrx-theme);
+$primary: mat-palette($primary-palette, 500);
+$accent: mat-palette($primary-palette, 500);
+
+$theme: mat-dark-theme($primary, $accent);
+
+@include angular-material-theme($theme);
+
+.material-dark-theme {
+  @include angular-material-theme($theme);
+}
