--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,21 @@
 <div class="home">
-    <h1 class="title">Home 😎</h1>
+  <h1 class="title">Home 😎</h1>
 
-    <div class="playlist-list">
-        <a class="link" [routerLink]="['/playlist', item.id]" class="playlist"
-            *ngFor="let item of trackService.getFeaturedPlaylists() | async">
-            <img class="playlist-img" [src]="item.images[0].url">
-            <h2 class="playlist-title">{{item.name}}</h2>
-        </a>
-    </div>
+  <div class="playlist-list" *ngIf="featuredPlaylists()?.length else skeletonLoading">
+    <a class="link" [routerLink]="['/playlist', item.id]" class="playlist" *ngFor="let item of featuredPlaylists()">
+      <img class="playlist-img" height="200" width="200" [ngSrc]="item.images[0].url">
+      <h2 class="playlist-title">{{item.name}}</h2>
+    </a>
+  </div>
 </div>
+
+<ng-template #skeletonLoading>
+  <div class="playlist-list">
+    <div class="link" class="playlist" *ngFor="let item of skeletonLoadingArray">
+      <ngx-skeleton-loader animation="progress-dark" count="1"
+        [theme]="{ height: '200px', width: '200px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
+      <ngx-skeleton-loader class="artist-skeleton" animation="progress-dark" count="1"
+        [theme]="{ height: '24px', width: '200px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
+    </div>
+  </div>
+</ng-template>
