--- a/src/app/track-list/track-list.component.html
+++ b/src/app/track-list/track-list.component.html
@@ -1,46 +1,46 @@
 <div #trackList class="track-list-container">
-    <mat-paginator (page)="handlePageEvent($event)" [length]="total" [pageSize]="pageSize" [pageIndex]="currentPage()"
-        aria-label="Select page">
-    </mat-paginator>
-    <ul class="track-list" *ngIf="tracksList().length; else skeletonLoading">
-        <li (click)="play(i)" class="track" *ngFor="let item of tracksList(); let i = index">
-            <div class="song-info">
-                <img class="track-img" width="90" height="90" [ngSrc]="item.track.album.images[1].url">
-                <div class="album-artist">
-                    <h2 class="name">{{item.track.name}}</h2>
-                    <span class="album-name">
-                        {{item.track.album.name}}
-                    </span>
-                    <div class="track-artist">
-                        <span *ngFor="let artist of item.track.artists" class="artist">{{artist.name}}</span>
-                    </div>
-                </div>
-            </div>
-            <span class="time">{{item.track.duration_ms | duration}}
-            </span>
-        </li>
-    </ul>
+  <mat-paginator class="paginator" (page)="handlePageEvent($event)" [length]="total" [pageSize]="pageSize"
+    [pageIndex]="currentPage()" aria-label="Select page">
+  </mat-paginator>
+  <ul class="track-list" *ngIf="tracksList().length; else skeletonLoading">
+    <li (click)="play(i)" class="track" *ngFor="let item of tracksList(); let i = index">
+      <div class="song-info">
+        <img class="track-img" width="90" height="90" [ngSrc]="item.track.album.images[1].url">
+        <div class="album-artist">
+          <h2 class="name">{{item.track.name}}</h2>
+          <span class="album-name">
+            {{item.track.album.name}}
+          </span>
+          <div class="track-artist">
+            <span *ngFor="let artist of item.track.artists" class="artist">{{artist.name}}</span>
+          </div>
+        </div>
+      </div>
+      <span class="time">{{item.track.duration_ms | duration}}
+      </span>
+    </li>
+  </ul>
 
 </div>
 
 <ng-template #skeletonLoading>
-    <ul class="track-list track-list--skeleton">
-        <li class="track" *ngFor="let item of skeletonLoadingArray; let i = index">
-            <div class="song-info">
-                <ngx-skeleton-loader animation="progress-dark" count="1"
-                    [theme]="{ height: '90px', width: '90px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
-                <div class="album-artist">
-                    <ngx-skeleton-loader animation="progress-dark" count="1"
-                        [theme]="{ height: '32px', width: '300px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
-                    <ngx-skeleton-loader class="artist-skeleton" animation="progress-dark" count="2"
-                        [theme]="{ height: '16px', width: '200px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
-                </div>
-            </div>
+  <ul class="track-list track-list--skeleton">
+    <li class="track" *ngFor="let item of skeletonLoadingArray; let i = index">
+      <div class="song-info">
+        <ngx-skeleton-loader animation="progress-dark" count="1"
+          [theme]="{ height: '90px', width: '90px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
+        <div class="album-artist">
+          <ngx-skeleton-loader animation="progress-dark" count="1"
+            [theme]="{ height: '32px', width: '300px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
+          <ngx-skeleton-loader class="artist-skeleton" animation="progress-dark" count="2"
+            [theme]="{ height: '16px', width: '200px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
+        </div>
+      </div>
 
-            <span class="time">
-                <ngx-skeleton-loader animation="progress-dark" count="1"
-                    [theme]="{ height: '16px', width: '40px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
-            </span>
-        </li>
-    </ul>
+      <span class="time">
+        <ngx-skeleton-loader animation="progress-dark" count="1"
+          [theme]="{ height: '16px', width: '40px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
+      </span>
+    </li>
+  </ul>
 </ng-template>
