--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,38 +1,37 @@
 <div class="player">
-    <ng-container *ngIf="playerState | async as player">
-        <mat-slider *ngIf="playerService.playbackState | async as position" class="song-slider" min="1"
-            [max]="player.duration" step="10">
-            <input (dragEnd)="setPosition($event)" [value]="position" matSliderThumb>
-        </mat-slider>
-        <div class="song-info">
-            <img class="album-image" [src]="player.track_window.current_track.album.images[0].url">
-            <div class="album-artist">
-                <h2 class="name">{{player.track_window.current_track.name}}</h2>
-                <span class="album-name">
-                    {{player.track_window.current_track.album.name}}
-                </span>
-                <div class="artist-container">
-                    <span *ngFor="let item of player.track_window.current_track.artists"
-                        class="artist">{{item.name}}</span>
-                </div>
-            </div>
+  <ng-container *ngIf="playerState | async as player">
+    <mat-slider *ngIf="playerService.playbackState | async as position" class="song-slider" min="1"
+      [max]="player.duration" step="10">
+      <input (dragEnd)="setPosition($event)" [value]="position" matSliderThumb>
+    </mat-slider>
+    <div class="song-info">
+      <img class="album-image" [src]="player.track_window.current_track.album.images[0].url">
+      <div class="album-artist">
+        <h2 class="name">{{player.track_window.current_track.name}}</h2>
+        <span class="album-name">
+          {{player.track_window.current_track.album.name}}
+        </span>
+        <div class="artist-container">
+          <span *ngFor="let item of player.track_window.current_track.artists" class="artist">{{item.name}}</span>
         </div>
-        <div class="action-buttons">
-            <button class="btn" (click)="skipPrev()">
-                <mat-icon>skip_previous</mat-icon>
-            </button>
-            <button class="btn" (click)="togglePlay()">
-                <mat-icon *ngIf="player.paused">play_circle_outline</mat-icon>
-                <mat-icon *ngIf="!player.paused">pause_circle_outline</mat-icon>
-            </button>
-            <button class="btn" (click)="skipNext()">
-                <mat-icon>skip_next</mat-icon>
-            </button>
-        </div>
-        <div class="slider-container">
-            <mat-slider class="volume-slider" min="0" max="1" step="0.1">
-                <input (dragEnd)="setVolume($event)" value="0.5" matSliderThumb>
-            </mat-slider>
-        </div>
-    </ng-container>
+      </div>
+    </div>
+    <div class="action-buttons">
+      <button class="btn" (click)="playerService.skipPrev()">
+        <mat-icon>skip_previous</mat-icon>
+      </button>
+      <button class="btn" (click)="playerService.tooglePlay()">
+        <mat-icon *ngIf="player.paused">play_circle_outline</mat-icon>
+        <mat-icon *ngIf="!player.paused">pause_circle_outline</mat-icon>
+      </button>
+      <button class="btn" (click)="playerService.skipNext();">
+        <mat-icon>skip_next</mat-icon>
+      </button>
+    </div>
+    <div class="slider-container">
+      <mat-slider class="volume-slider" min="0" max="1" step="0.1">
+        <input (dragEnd)="setVolume($event)" value="0.5" matSliderThumb>
+      </mat-slider>
+    </div>
+  </ng-container>
 </div>
