--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,4 +13,38 @@
     background-color: #35393c;
     padding: 24px 16px 16px;
   }
+
+  .app-login {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #35393c;
+  }
+
+  .app-login__button {
+    font-size: 1.6rem;
+    padding: 16px 48px;
+    border-radius: 32px;
+    text-transform: uppercase;
+  }
+
+  .app-login__title-wrapper {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    margin-bottom: 32px;
+  }
+
+  .app-login__title {
+    font-size: 4.4rem;
+    margin-bottom: 0;
+  }
+
+  .app-login__text {
+    font-size: 2.8rem;
+    margin-bottom: 48px;
+  }
 }
