--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,83 +2,91 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&display=swap');
 
 $primary: #1ecd5d;
-$text: #fff;
+$text: #f2f4f5;
 $text-dark: #363636;
 $bg-elevation: #363636;
 
 html,
 body {
-    height: 100%;
+  height: 100%;
+  font-size: 10px;
 }
 
 body {
-    margin: 0;
-    font-family: 'Fredoka', sans-serif;
-    color: $text;
+  margin: 0;
+  font-family: 'Fredoka', sans-serif;
+  color: $text;
 
-    .app {
+  .app {
 
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6,
-        a,
-        p,
-        span,
-        div {
-            font-family: 'Fredoka', sans-serif;
-        }
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    a,
+    p,
+    span,
+    div {
+      font-family: 'Fredoka', sans-serif;
     }
+  }
 
-    img {
-        filter: brightness(0.8) contrast(1.2);
-    }
+  p,
+  div,
+  a,
+  span {
+    font-size: 1.6rem;
+  }
+
+  img {
+    filter: brightness(0.8) contrast(1.2);
+  }
 }
 
 @mixin btn($background-color, $border-color) {
-    color: $text-dark;
-    background-color: $background-color;
-    border: 2px solid $border-color;
-    padding: 10px 20px;
-    border-radius: 10px;
-    font-family: 'Fredoka', sans-serif;
-    font-weight: 600;
-    transition: background-color 0.3s, border-color 0.3s;
+  color: $text;
+  background-color: $background-color;
+  border: 2px solid $border-color;
+  padding: 10px 20px;
+  border-radius: 10px;
+  font-family: 'Fredoka', sans-serif;
+  font-weight: 600;
+  transition: background-color 0.3s, border-color 0.3s;
 
-    svg {
-        width: 18px;
-        height: 18px;
-    }
+  svg {
+    width: 18px;
+    height: 18px;
+  }
 
-    &:hover {
-        background-color: rgba($primary, 0.3);
-        border-color: rgba($primary, 0.3);
-    }
+  &:hover {
+    background-color: rgba($primary, 0.8);
+    border-color: rgba($primary, 0.8);
+  }
 }
 
 /* Works on Firefox */
 * {
-    scrollbar-width: thin;
-    scrollbar-color: $primary $bg-elevation;
+  scrollbar-width: thin;
+  scrollbar-color: $primary $bg-elevation;
 }
 
 /* Works on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-    width: 12px;
+  width: 12px;
 }
 
 *::-webkit-scrollbar-track {
-    background: $text-dark;
+  background: $text-dark;
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: $primary;
-    border-radius: 20px;
-    border: 3px solid $text-dark;
+  background-color: $primary;
+  border-radius: 20px;
+  border: 3px solid $text-dark;
 }
 
 .btn {
-    @include btn($primary, $primary);
+  @include btn($primary, $primary);
 }
