--- a/src/app/playlist-tracks/playlist-tracks.component.html
+++ b/src/app/playlist-tracks/playlist-tracks.component.html
@@ -1,6 +1,7 @@
 <div class="playlist">
   <h1 *ngIf="title() else skeletonLoading" class="title">{{title()}}</h1>
-  <app-track-list class="track-list" (getNextPage)="getNextPage($event)" [total]="total()" [tracksList]="tracks">
+  <app-track-list class="track-list" [isLoading]="trackService.isLoading" (getNextPage)="getNextPage($event)"
+    [total]="total()" [tracksList]="tracks">
   </app-track-list>
 </div>
 
