--- a/src/app/track-list/track-list.component.html
+++ b/src/app/track-list/track-list.component.html
@@ -2,7 +2,7 @@
   <mat-paginator class="paginator" (page)="handlePageEvent($event)" [length]="total" [pageSize]="pageSize"
     [pageIndex]="currentPage()" aria-label="Select page">
   </mat-paginator>
-  <ul class="track-list" *ngIf="tracksList().length; else skeletonLoading">
+  <ul class="track-list" *ngIf="!(isLoading | async); else skeletonLoading">
     <li (click)="play(i)" class="track" *ngFor="let item of tracksList(); let i = index">
       <div class="song-info">
         <img class="track-img" width="90" height="90" [ngSrc]="item.track.album.images[1].url">
