--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
 
   <div class="playlist-list" *ngIf="featuredPlaylists()?.length else skeletonLoading">
     <a class="link" [routerLink]="['/playlist', item.id]" class="playlist" *ngFor="let item of featuredPlaylists()">
-      <img class="playlist-img" height="200" width="200" [ngSrc]="item.images[0].url">
+      <img priority class="playlist-img" height="200" width="200" [ngSrc]="item.images[0].url">
       <h2 class="playlist-title">{{item.name}}</h2>
     </a>
   </div>
